--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:name="com.jentronics.cs3270a3.SingleGameFrag"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="2"
+        android:layout_margin="20dp"
     />
 
     <fragment
@@ -21,6 +22,6 @@
         android:name="com.jentronics.cs3270a3.TotalsFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="3"
     />
 </LinearLayout>
